---------------------------------------------------------------------------------------------------
Version: 1.4.0
Game Versions: v1.0.0 - v1.2.9 (all of them)
* Recompiled for the latest versions.
* Added Xbox support.
* Fixed common crash issues.
* Added compatibility setting for loadout stages.
* Changed how participants for classic tournaments are selected (should also fix an issue with multiple companions).
* Fixed an issue with wrong string variation used after winning while beating over 35 opponents in a practice fight.
---------------------------------------------------------------------------------------------------
Version: 1.3.6
Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0,v1.1.1,v1.1.2,v1.1.3,v1.1.4,v1.1.5,v1.2.0,v1.2.1,v1.2.2,v1.2.3
* Recompiled for the latest versions.
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0,v1.1.1,v1.1.2
* Recompiled for the latest versions.
* Fixed a crash that occurred if the settlement did not have a current owner.
* Fixed a crash that occurred when the tournament was not initialized correctly.
* Practice fights now use the settlement's default culture to determine equipment if the settlement does not currently have an owner.
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0
* Added some sanity checks on Tournament reward calculation for modded games.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0
* Fixed a rare crash that occurred while preparing for a Team Tournament match.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0