@@ -181,7 +181,9 @@
 		<string id="gQvJ8Vvsk" text="The maximum amount of gold that is usually allowed to be wagered in each round of a tournament. Native = 150. Default = 500." />
 		<string id="qPAga7DLd" text="Enable randomized betting odds" />
 		<string id="kGyR7NsKh" text="When this option is enabled, bet odds are slightly randomized, but still mostly based on the prediction of the player's success." />
-		<string id="cCAOeRdmt" text="Prize reroll condition" />
+        <string id="hARcKe6Jt" text="Allow notables participation" />
+        <string id="YqIOYTV0P" text="Allow settlement notables to participate in Tournaments. Recommended with tournament armor mods. Native is False. Default is True." />
+        <string id="cCAOeRdmt" text="Prize reroll condition" />
 		<string id="CDGmDeYii" text="Specify when and if tournament prizes should be rerolled. Normally prizes are rerolled when player joins the tournament - if the nubmber of participating nobles changed since the tournament was created (affects prize quality). Native is [When situation changed]. Default is [When prize tier can be improved]." />
 		<string id="IfsaDqygk" text="Enable gold prizes" />
 		<string id="yVAG4f83d" text="When this option is enabled, there are also gold prizes in tournaments. This is in addition to the usual prize items and bet wins." />
